--- a/SlidingMenu/res/values/strings.xml
+++ b/SlidingMenu/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="password">Enter Password</string>
     <string name="login">Login</string>
     <string name="welcome">Welcome</string>
+    <string name="status">What is your feel now ?</string>
 
     <!-- Nav Drawer Menu Items -->
     <string-array name="nav_drawer_items">
