--- a/SlidingMenu/res/values/strings.xml
+++ b/SlidingMenu/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="password">Enter Password</string>
     <string name="login">Login</string>
     <string name="welcome">Welcome</string>
+    <string name="btn_signup">Sign Up</string>
 
     <!-- Nav Drawer Menu Items -->
     <string-array name="nav_drawer_items">
@@ -34,5 +35,6 @@
 
     <!-- Content Description -->
     <string name="desc_list_item_icon">Item Icon</string>
+    <string name="title_activity_signup">Signup</string>
 
 </resources>
