--- a/SlidingMenu/res/values/strings.xml
+++ b/SlidingMenu/res/values/strings.xml
@@ -10,7 +10,8 @@
     <string name="password">Enter Password</string>
     <string name="login">Login</string>
     <string name="welcome">Welcome</string>
-
+    <string name="message">Message</string>
+    
     <!-- Nav Drawer Menu Items -->
     <string-array name="nav_drawer_items">
         <item>Home</item>
