--- a/SlidingMenu/res/values/strings.xml
+++ b/SlidingMenu/res/values/strings.xml
@@ -12,7 +12,10 @@
     <string name="welcome">Welcome</string>
     <string name="message">Message</string>
     <string name="btn_signup">Sign Up</string>
-
+    <string name="btn_send">Send</string>
+    <string name="edit_message">Enter a message</string>
+     <string name="default_message">Hello</string>
+    
 
     <!-- Nav Drawer Menu Items -->
     <string-array name="nav_drawer_items">
